--- a/.editorconfig
+++ b/.editorconfig
@@ -14,5 +14,16 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 
+[*.rs]
+indent_size = false
+
 [*.md]
 trim_trailing_whitespace = false
+
+[*.{yml,yaml}]
+indent_size = 2
+
+# Ignore License files
+[LICENSE-*]
+indent_size = unset
+indent_style = unset
