--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,123 +1,73 @@
-name: CI
+---
+name: Build CI
 
 on:
-    push:
-        branches:
-            - main
-            - devel
-    pull_request:
-        branches:
-            - main
-            - devel
+  push:
+    branches:
+    - main
+    - devel
+  pull_request:
+    branches:
+    - main
+    - devel
 
 jobs:
-    rust-lint:
-        name: Lint
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout the source code
-              uses: actions/checkout@v4
+  test:
+    name: Test
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        rust_versions: ["stable", "1.67"]
+        os: [ubuntu-latest, windows-latest]
+    steps:
+    - name: Checkout the source code
+      uses: actions/checkout@v4
 
-            - name: Install Rust stable
-              run: |
-                  rustup toolchain update --no-self-update stable
-                  rustup default stable
-                  rustup component add clippy rustfmt
+    - uses: dtolnay/rust-toolchain@master
+      with:
+        toolchain: ${{ matrix.rust_versions }}
 
-            - name: Run rustfmt
-              run: cargo fmt -- --check
+    - name: Build lib
+      run: cargo build
 
-            - name: Run clippy
-              run: cargo clippy --all-features
-              env:
-                  RUSTFLAGS: -D warnings
+    - name: Test lib
+      run: cargo test --all-features
+      env:
+        RUSTFLAGS: -D warnings
 
-    test:
-        name: Test
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                rust_versions: ["stable", "1.67"]
-                os: [ubuntu-latest, windows-latest]
-        steps:
-            - name: Checkout the source code
-              uses: actions/checkout@v4
+  features:
+    name: Test Individual Features
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout the source code
+      uses: actions/checkout@v4
 
-            - name: Install Rust Versions
-              run: |
-                  rustup toolchain install --no-self-update ${{ matrix.rust_versions }}
-                  rustup default stable
+    - uses: dtolnay/rust-toolchain@stable
 
-            - name: Build lib
-              run: rustup run ${{ matrix.rust_versions }} cargo build ${{ matrix.cargo_build_flags }}
+    - name: Install jq
+      run: |
+        sudo apt-get install -y --no-install-recommends jq
 
-            - name: test lib
-              run: cargo test --all-features
-              env:
-                  RUSTFLAGS: -D warnings
+    - name: Test lib
+      run: |
+        for feature in $(cargo read-manifest | jq -r '.features|keys|join("\n")'); do
+            echo building with feature "$feature"
+            RUSTFLAGS='-D warnings' cargo test --no-default-features --features "$feature"
+        done
 
-    features:
-        name: Test Individual Features
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout the source code
-              uses: actions/checkout@v4
+  bench:
+    name: Benchmark the background_rotation feature
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        rust_versions: ["stable", "1.67"]
+    steps:
+    - name: Checkout the source code
+      uses: actions/checkout@v4
 
-            - name: Install Rust toolchain and jq
-              run: |
-                  rustup toolchain install --no-self-update stable
-                  rustup default stable
-                  sudo apt-get install -y --no-install-recommends jq
+    - uses: dtolnay/rust-toolchain@master
+      with:
+        toolchain: ${{ matrix.rust_versions }}
 
-            - name: Test lib
-              run: |
-                  for feature in $(cargo read-manifest | jq -r '.features|keys|join("\n")'); do
-                    echo building with feature "$feature"
-                    RUSTFLAGS='-D warnings' cargo test --no-default-features --features "$feature"
-                  done
-
-    bench:
-        name: Benchmark the background_rotation feature
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                rust_versions: ["stable", "1.67"]
-        steps:
-            - name: Checkout the source code
-              uses: actions/checkout@v4
-
-            - name: Install Rust toolchain
-              run: |
-                  rustup toolchain install --no-self-update stable
-                  rustup default stable
-
-            - name: Rotation with backgrounded rotation
-              run: cargo bench  --features gzip,background_rotation
-
-    cargo-audit:
-        name: Audit the baseline for CVEs
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout the source code
-              uses: actions/checkout@v4
-
-            - name: Install Rust toolchain
-              run: |
-                  rustup toolchain install --no-self-update stable
-                  rustup default stable
-
-            - name: Install Auditting Tools
-              run: cargo install cargo-audit
-
-            - name: Audit project
-              run: cargo audit
-
-    docs-lint:
-        name: Lint
-        runs-on: ubuntu-latest
-        steps:
-            - name: Markdown Linting Action
-              uses: avto-dev/markdown-lint@v1.5.0
-              with:
-                  config: .markdownlint.yml
-                  args: docs/Configuration.md README.md
+    - name: Bench features
+      run: cargo bench --all-features
